Improve post styling

--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -1,5 +1,5 @@
 @use "variables" as *;
-@use "./helpers";
+@use "./helpers" as h;
 @use "colorscheme" as colors;
 
 @import "./typo";
@@ -110,71 +110,6 @@ body {
   background-color: var(--surface4);
 }
 
-/** lists */
-ol li::marker {
-  font-size: 1rem;
-}
-ul li {
-  &::marker {
-    color: var(--text2);
-    font-size: 1rem;
-  }
-}
-
-pre {
-  padding: calc(4 * var(--gap));
-  border-radius: var(--gap);
-  margin: 0 0 1.5rem 0;
-  background-color: var(--surface3);
-  overflow: auto;
-}
-
-code,
-pre,
-pre code {
-  text-shadow: none;
-  font-family: var(--code-family);
-  overflow: hidden;
-}
-
-blockquote {
-  width: 100%;
-  margin: 0 0 1.5rem 0;
-  padding-left: calc(2 * var(--gap));
-  font-size: 1rem;
-  border-left: 4px solid var(--brand);
-}
-
-table {
-  margin-bottom: 1.5rem;
-  border-spacing: 0px;
-  border-top: 0px;
-  overflow: hidden;
-
-  & thead {
-    background-color: var(--brand);
-    color: var(--text1);
-    font-weight: bold;
-    font-family: var(--title-family);
-    font-size: 1.2rem;
-  }
-  & tr:not(:last-child) {
-    & td {
-      border-bottom: 1px solid var(--surface2);
-    }
-  }
-  & tr:last-child {
-    & td {
-      border-bottom: 1px solid var(--surface2);
-    }
-  }
-
-  & th,
-  & td {
-    padding: calc(2 * var(--gap));
-    border-right: 1px solid var(--surface2);
-    &:first-of-type {
-      border-left: 1px solid var(--surface2);
-    }
-  }
+.shadowed {
+  @include h.shadow();
 }
