--- a/web/public/styles/prism/solarizedLight.css
+++ b/web/public/styles/prism/solarizedLight.css
@@ -31,7 +31,7 @@ green     #859900
 code[class*="language-"],
 pre[class*="language-"] {
 	color: #657b83; /* base00 */
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	font-family: var(--code-family);
 	font-size: 1em;
 	text-align: left;
 	white-space: pre;
