--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -19,7 +19,8 @@
   --text1: var(--text1-light);
   --text2: var(--text2-light);
   --text1-invert: var(--text1-dark);
-  --text2-invert: var(--text1-dark);
+  --text2-invert: var(--text2-dark);
+
   --surface1: var(--surface1-light);
   --surface2: var(--surface2-light);
   --surface3: var(--surface3-light);
@@ -41,6 +42,9 @@
     --brand: var(--brand-dark);
     --text1: var(--text1-dark);
     --text2: var(--text2-dark);
+    --text1-invert: var(--text1-light);
+    --text2-invert: var(--text2-light);
+
     --surface1: var(--surface1-dark);
     --surface2: var(--surface2-dark);
     --surface3: var(--surface3-dark);
