--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -14,12 +14,9 @@ export interface Props {
     description: string
   }
 }
-props = {
-  content,
-}
 ---
 <!DOCTYPE html>
-<BaseLayout ...props>
+<BaseLayout {content}>
   <article id="content">
     <section class="page404">
       <div class="grid2">
@@ -53,23 +50,20 @@ props = {
 
 .grid2 {
   width: 100%;
-  // height: 80%;
   margin: 1em;
   margin-top: var(--headerH);
 
-  // $gridGap: $gap * 4;
-  // @include grids.grid(6, $gridGap);
-  // grid-template-rows: repeat(6, minmax(80px, 100%) );
   display: grid;
   grid-gap: calc(var(--gap) * 4);
-
-  // justify-items: end;
 
   :global(.headline) {
     grid-column: span 1;
     grid-row: span 6;
 
     writing-mode: vertical-rl;
+    > h1 {
+      margin-top: 0;
+    }
 
     @include bp.breakpoint(small, max) {
       writing-mode: horizontal-tb;
