--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -1,5 +1,6 @@
 @use "variables" as *;
 @use "./helpers" as h;
+@use "./grids" as grids;
 @use "colorscheme" as colors;
 
 @import "./typo";
@@ -92,6 +93,12 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 /** Colorscheme */
 .text1 {
@@ -116,4 +123,22 @@ body {
 
 .shadowed {
   @include h.shadow();
+}
+
+/** Grid generics */
+.grid2 {
+  @include grids.grid(2);
+  align-content: space-evenly;
+  justify-content: space-evenly;
+}
+.justifyCenter {
+  justify-items: center;
+}
+
+.twocolumn-page {
+  columns: 2;
+
+  > p:first-of-type {
+    margin-top: 0;
+  }
 }
