--- a/web/src/components/Masthead/masthead.module.scss
+++ b/web/src/components/Masthead/masthead.module.scss
@@ -13,10 +13,20 @@
   padding: var(--headerH) 0;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.title {
+.title,
+.subtitle {
   margin-top: 0;
+}
+
+.logo {
+  padding-top: 2em;
+  transition: transform 0.13s ease-out;
+  &:hover {
+    transform: scale(1.2);
+  }
 }
