Feat: Added portinari project

--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -33,7 +33,7 @@ let projects = await listProjects();
         </div>
         <div class="item decoration">
           <img alt="nada" src="/pictures/Dieffenbachia robusta.png" />
-        </div>👋
+        </div>
       </div>
     </section>
 
