--- a/web/src/pages/projects/index.astro
+++ b/web/src/pages/projects/index.astro
@@ -4,8 +4,8 @@ import BaseLayout from '../../layouts/base.astro';
 let projects = Astro.fetchContent("./**/*.md");
 
 let content = {
-  title: 'Page not found',
-  description: 'Page not found',
+  title: 'Projects',
+  description: 'Page about projects',
   schema: 'article'
 };
 
