--- a/web/src/components/Card/CardExpand.module.scss
+++ b/web/src/components/Card/CardExpand.module.scss
@@ -23,18 +23,25 @@ $cardHeight: 280px;
   position: relative;
   display: block;
   pointer-events: none;
+
+  &:global(.expanded) {
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    overflow: hidden;
+  }
 }
 
 .content {
   pointer-events: auto;
   position: relative;
   border-radius: calc(var(--gap) * 4);
-  background: var(--surface4);
+  background: white;
   overflow: hidden;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  @include helpers.shadow();
 }
 
 .avatar {
@@ -42,15 +49,13 @@ $cardHeight: 280px;
   top: 0;
   left: 0;
   overflow: hidden;
-  width: 100%;
+  width: 100vw;
   height: $cardHeight;
   transform: translateZ(0);
 
   :global(img) {
     width: 100%;
-    height: 100%;
     object-fit: cover;
-    object-position: center center;
     // height: $cardHeight;
   }
 }
@@ -65,7 +70,33 @@ $cardHeight: 280px;
   padding: 1em;
   overflow: hidden;
 
-  color: var(--surface1);
+  color: white;
+}
+
+.content-placeholder {
+  margin-top: $cardHeight;
+  padding: 1em;
+
+  :global(.paragraph) {
+    overflow: auto;
+    margin: 0.5em 0 0.5em 0;
+
+    :global(div) {
+      border-radius: var(--gap);
+      margin: 0.5em 0 0.5em 0;
+      width: 70%;
+      height: 16px;
+      background: rgba(187, 0, 255, 0.16);
+    }
+    :global(div:nth-of-type(2n)),
+    :global(div:nth-of-type(3n)) {
+      width: 96%;
+    }
+    :global(div:first-of-type),
+    :global(div:nth-of-type(9n)) {
+      width: 40%;
+    }
+  }
 }
 
 .title {
