--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -76,6 +76,7 @@ body {
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 /** Global wrapper */
@@ -140,5 +141,15 @@ body {
 
   > p:first-of-type {
     margin-top: 0;
+  }
+}
+
+.full-bleed {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
+  & > * {
+    max-width: 50rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
