--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -13,8 +13,31 @@ $cardHeight: 280px;
   flex-direction: column;
 
   border: 0;
-
   text-decoration: none;
+
+  /**
+   * Hover/focus state
+   */
+  &:hover,
+  &:focus {
+    .avatar img {
+      filter: grayscale(0);
+      transform: scale(1.05);
+    }
+    .avatar::before {
+      opacity: 0.7;
+    }
+    .avatar::after {
+      opacity: 1;
+    }
+  }
+
+  &:focus {
+    img {
+      outline: 1rem solid white;
+      outline-offset: -1rem;
+    }
+  }
 }
 
 .content-container {
@@ -28,7 +51,7 @@ $cardHeight: 280px;
 .content {
   pointer-events: auto;
   position: relative;
-  border-radius: calc(var(--gap) * 4);
+  // border-radius: calc(var(--gap) * 4);
   background: var(--surface4);
   overflow: hidden;
   width: 100%;
@@ -41,17 +64,67 @@ $cardHeight: 280px;
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
   width: 100%;
   height: $cardHeight;
   transform: translateZ(0);
+  backface-visibility: hidden;
+  overflow: hidden;
 
   :global(img) {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center center;
-    // height: $cardHeight;
+
+    filter: grayscale(1);
+    transition: filter 200ms ease, transform 250ms linear;
+  }
+
+  /**
+   * Overlays
+   */
+  &::before,
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    opacity: 0;
+  }
+
+  &::before {
+    background: linear-gradient(
+      to top,
+      hsl(0 0% 0% / 0.79) 0%,
+      hsl(0 0% 0% / 0.787) 7.8%,
+      hsl(0 0% 0% / 0.779) 14.4%,
+      hsl(0 0% 0% / 0.765) 20.2%,
+      hsl(0 0% 0% / 0.744) 25.3%,
+      hsl(0 0% 0% / 0.717) 29.9%,
+      hsl(0 0% 0% / 0.683) 34.3%,
+      hsl(0 0% 0% / 0.641) 38.7%,
+      hsl(0 0% 0% / 0.592) 43.3%,
+      hsl(0 0% 0% / 0.534) 48.4%,
+      hsl(0 0% 0% / 0.468) 54.1%,
+      hsl(0 0% 0% / 0.393) 60.6%,
+      hsl(0 0% 0% / 0.31) 68.3%,
+      hsl(0 0% 0% / 0.216) 77.3%,
+      hsl(0 0% 0% / 0.113) 87.7%,
+      hsl(0 0% 0% / 0) 100%
+    );
+    transition: 300ms opacity ease-out;
+  }
+  &::after {
+    background: linear-gradient(
+      45deg,
+      hsl(var(--brand-hue) var(--brand-saturation) var(--brand-lightness) / 0.7)
+        0,
+      hsl(var(--brand-hue) var(--brand-saturation) var(--brand-lightness) / 0)
+        100%
+    );
+    transition: 300ms opacity ease-out;
   }
 }
 
@@ -64,12 +137,20 @@ $cardHeight: 280px;
 
   padding: 1em;
   overflow: hidden;
+  pointer-events: none;
 
   color: var(--surface1);
 }
 
+.title-container[align-at="bottom"] {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 .title {
   @include helpers.text-truncate(2, 2);
+  text-transform: capitalize;
 
   margin-top: 0.2em;
   margin-bottom: 0.5em;
