--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -25,7 +25,9 @@ const content = Astro.props.content || {};
 .post  {
   max-width: 1440px;
   position: relative;
-  width: 80%;
+  width: 90vw;
+  width: clamp(16rem, 90vw, 70rem);
+  position: relative;
   margin: 3em auto;
 
   a:not(.footnote-ref,.footnote-backref) {
@@ -43,6 +45,22 @@ const content = Astro.props.content || {};
     text-align: center;
     color: var(--text2);
     font-style: italic;
+  }
+
+
+  /** Limit line-lengths */
+  p,
+  li {
+    max-width: 90ch;
+  }
+
+  h1 {
+    max-width: 15ch;
+  }
+
+  h2,
+  h3 {
+    max-width: 25ch;
   }
 
   /**
