--- a/web/src/components/Masthead/masthead.module.scss
+++ b/web/src/components/Masthead/masthead.module.scss
@@ -1,30 +1,36 @@
 .masthead {
-  height: 600px;
+  height: 400px;
   max-height: 600px;
   width: 100%;
   display: flex;
-  overflow: hidden;
   background-color: var(--surface4);
 }
 
 .contentContainer {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   padding: var(--headerH) 0;
+  padding-left: calc(var(--gap) * 8);
 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-start;
 }
 
 .title,
 .subtitle {
-  margin-top: 0;
+  margin: 0;
+  text-transform: capitalize;
+}
+.subtitle {
+  color: var(--text2);
+  font-variation-settings: "wght" 200;
 }
 
 .logo {
-  padding-top: 2em;
+  width: clamp(48px, 96px, 128px);
+  padding-inline-end: 1rem;
   transition: transform 0.13s ease-out;
   &:hover {
     transform: scale(1.2);
