Upgrade to astro 0.20

--- a/web/src/components/Header/Header.module.scss
+++ b/web/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
-@use "public/styles/variables" as *;
-@use "public/styles/breakpoints" as bp;
+@use "src/styles/variables" as *;
+@use "src/styles/breakpoints" as bp;
 
 .header {
   position: relative;
