--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -18,9 +18,9 @@ const content = Astro.props.content || {};
 </BaseLayout>
 
 <style lang="scss" global>
-@use "public/styles/grids" as grids;
-@use "public/styles/helpers" as h;
-@use "public/styles/typo" as typo;
+@use "src/styles/grids" as grids;
+@use "src/styles/helpers" as h;
+@use "src/styles/typo" as typo;
 
 .post  {
   max-width: 1440px;
