--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -33,9 +33,9 @@ export interface Props {
 
 <style lang="scss" scoped>
 @use "sass:math";
-@use "public/styles/variables" as *;
-@use "public/styles/breakpoints" as bp;
-@use "public/styles/grids" as grids;
+@use "src/styles/variables" as *;
+@use "src/styles/breakpoints" as bp;
+@use "src/styles/grids" as grids;
 
 #content {
   position: relative;
