--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -1,5 +1,5 @@
-@use "public/styles/variables" as *;
-@use "public/styles/helpers" as helpers;
+@use "src/styles/variables" as *;
+@use "src/styles/helpers" as helpers;
 
 $cardHeight: 280px;
 
