--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -5,7 +5,7 @@
   <main class="main" id="main" tabIndex={-1}>
     <slot />
   </main>
-  <footer class="footer">
+  <footer role="contentinfo" class="footer">
     <div class="container pad4">
       <slot name="footer" class="container" />
     </div>
