--- a/web/src/layouts/base.astro
+++ b/web/src/layouts/base.astro
@@ -7,13 +7,14 @@ import Footer from '../components/Footer/Footer.jsx';
 
 const content:any = Astro.props.content;
 ---
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{content.title}</title>
-    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href={Astro.resolve('../styles/global.css')} />
     <meta name="description" content="{content.description}" />
     <meta name="schema" content="{content.schema}" />
     <SEO module="og" ...content />
