--- a/web/src/styles/_typo.scss
+++ b/web/src/styles/_typo.scss
@@ -1,4 +1,4 @@
-@use "public/styles/breakpoints" as bp;
+@use "src/styles/breakpoints" as bp;
 
 @import url("https://rsms.me/inter/inter.css");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
